--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -38,7 +38,8 @@
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tiny-csrf": "^1.1.6"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
